Bug 323882 - Menu entry is renamed after a few seconds in german translation
Summary: Menu entry is renamed after a few seconds in german translation
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 4.11
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-22 08:24 UTC by qqqqqqqqq9
Modified: 2013-10-31 06:43 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description qqqqqqqqq9 2013-08-22 08:24:23 UTC
The menu entry "Ordner löschen" (Delete Folder) is renamed to "Ordner entfernen" after a few seconds.

Reproducible: Always

Steps to Reproduce:
1. Start kmail with de_DE.UTF-8 locale
2. right-click an unselected folder which is deletable
3. Observe the entry "Ordner löschen"
4. Wait a couple of seconds

Actual Results:  
5. Observe that the entry has changed to "Ordner entfernen"

Expected Results:  
The menu entry should not change.
Comment 1 Burkhard Lück 2013-10-25 06:32:10 UTC
Confirmed using Kubuntu 12.04 + KDE 4.11.1
Comment 2 Burkhard Lück 2013-10-29 19:14:40 UTC
I found two diffferent german translation here:

kmail/kmmainwidget.cpp:1640:    title = i18n("Delete Folder");

kmmainwidget.cpp:4157:   mAkonadiStandardActionManager->action( Akonadi::StandardActionManager::DeleteCollections )->setText( isASearchFolder ? i18n("&Delete Search") : i18n("&Delete Folder") );

The translation of both strings have been sync'ed in 4.11 now, so you will not see the changing menu entry in locale de any more.
Comment 3 Allen Winter 2013-10-29 19:23:03 UTC
Burkhard,
So can this one be resolved ?
Comment 4 Burkhard Lück 2013-10-30 19:00:40 UTC
(In reply to comment #3)
> Burkhard,
> So can this one be resolved ?

No, because even in locale en_US and x-test I see a jumping clash after a few seconds like in locale de.
But sadly I have no clue what's the reason.
Comment 5 Laurent Montel 2013-10-31 06:37:02 UTC
kmail/kmmainwidget.cpp:1640: title = i18n("Delete Folder"); it's for an dialog box
"kmmainwidget.cpp:4157: mAkonadiStandardActionManager->action( Akonadi::StandardActionManager::DeleteCollections )->setText( isASearchFolder ? i18n("&Delete Search") : i18n("&Delete Folder") );" is for menu entry

So no it's not the bug.
But is from akonadi::standardmenu entry and kmail.
Will fix
Comment 6 Laurent Montel 2013-10-31 06:43:45 UTC
Git commit 444e958b86db9a6c4c76ddffb3e9afb5e59b06b6 by Montel Laurent.
Committed on 31/10/2013 at 06:42.
Pushed by mlaurent into branch 'KDE/4.11'.

Fix Bug 323882 - Menu entry is renamed after a few seconds in german translation

FIXED-IN: 4.11.3

Use standard translation from standardactionmenu to avoid to have 2 different translated string.

M  +2    -1    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/444e958b86db9a6c4c76ddffb3e9afb5e59b06b6