Fix Bug 323882 - Menu entry is renamed after a few seconds in german translation

FIXED-IN: 4.11.3
BUG: 323882

Use standard translation from standardactionmenu to avoid to have 2 different translated string.